--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: python
 python:
-  - "2.7.4"
-  - "2.7.5"
-  - "2.7.6"
+  - "2.7"
   - "3.3"
 
-before_install:
+install:
+  - pip install .
   - pip install requests --use-mirrors
   - pip install requests-oauthlib --use-mirrors
   - pip install lockfile --use-mirrors
@@ -16,7 +15,3 @@ script:
 
 after_success:
   - coveralls
-
-notifications:
-  email:
-    - arek.felinczak@mosaic-lab.com
