--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install coveralls --use-mirrors
 
 script:
-  - coverage run --source=mangopaysdk test_suite.py
+  - make coverage
 
 after_success:
   - coveralls
