Update readme, travis file and setup to use fasteners instead of lockfile

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install .
   - pip install requests --use-mirrors
   - pip install requests-oauthlib --use-mirrors
-  - pip install lockfile --use-mirrors
+  - pip install fasteners --use-mirrors
   - pip install coveralls --use-mirrors
 
 script:
