Add infra specifications

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ install:
   - "pip install -r requirements/base.txt"
   - "pip install -r requirements/development.txt"
 script: nosetests
+sudo: required
+dist: precise
