Travis configuration update

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,5 @@ deploy:
 env:
   global:
   - secure: C7WuiEuB8OVeNEo1fdzKO5zS+cUfsPv0ZdZD167YezW9JOrD4Ujd2Jk1uqEJvq2xQpC8SQ5yFAR36s8JE5WO0DDL4Uxzzx+s83WsYnBqE73FnehpI5cXGqJVG6RpHFX1fAx0v88jFfiUE3dY2wF/NcQRACY5n/EMA4rEvt+rpIM=
-  - secure: RMpouHDn2h3+YCpgfs9wUspM58L/9BetulTVx4WfgnnSeqgvivhXKmmDPhOD4KhE7Wsd+89iBVQ5ltpWQT6//qapS1lIfOK7UJVKOeE3m/uFS9O0YmCA+vUETrbXcF4k7COViyQ/XoRKTygeC4hffsLrZhs7JsM/hPexB6BnIqg=
+  #- secure: RMpouHDn2h3+YCpgfs9wUspM58L/9BetulTVx4WfgnnSeqgvivhXKmmDPhOD4KhE7Wsd+89iBVQ5ltpWQT6//qapS1lIfOK7UJVKOeE3m/uFS9O0YmCA+vUETrbXcF4k7COViyQ/XoRKTygeC4hffsLrZhs7JsM/hPexB6BnIqg=
+  - secure: ozYaIxo31l/rUclVX+XWgpZzJwF6txu3FGeBFh5NOAbi8BB1FWjBvH9cyyv0j3JcnQokLqaOMqyCGCIxTV9cCZxqJB1M8BvHtJpcXX9ZZGJxWWdU67b5o+zOppHlUlQl38A9i1ZIYCd5inLdad6+GHloy93Gydi7g1UlK7JHo24= 
