--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,5 @@ deploy:
     condition: $TRAVIS_PYTHON_VERSION = "3.4"
 env:
   global:
-  #- secure: C7WuiEuB8OVeNEo1fdzKO5zS+cUfsPv0ZdZD167YezW9JOrD4Ujd2Jk1uqEJvq2xQpC8SQ5yFAR36s8JE5WO0DDL4Uxzzx+s83WsYnBqE73FnehpI5cXGqJVG6RpHFX1fAx0v88jFfiUE3dY2wF/NcQRACY5n/EMA4rEvt+rpIM=
-  #- secure: RMpouHDn2h3+YCpgfs9wUspM58L/9BetulTVx4WfgnnSeqgvivhXKmmDPhOD4KhE7Wsd+89iBVQ5ltpWQT6//qapS1lIfOK7UJVKOeE3m/uFS9O0YmCA+vUETrbXcF4k7COViyQ/XoRKTygeC4hffsLrZhs7JsM/hPexB6BnIqg=
-  - secure: ozYaIxo31l/rUclVX+XWgpZzJwF6txu3FGeBFh5NOAbi8BB1FWjBvH9cyyv0j3JcnQokLqaOMqyCGCIxTV9cCZxqJB1M8BvHtJpcXX9ZZGJxWWdU67b5o+zOppHlUlQl38A9i1ZIYCd5inLdad6+GHloy93Gydi7g1UlK7JHo24= 
-  - secure: B3b0U7wMBnxMXtTeTIO+JpV3ytzGqPEkF1v6p49OwGIQFNcQFn+j44C4SM9lGpE33UG3W4oCB9aCeFI52QpyNUGOXJig0lw18A57DeojRC0N5zBgwroJxTylpraUwIpj1JTpaQTYspxT88qyyUDLJTD8dAcLvLAaB3M21cl3G5g=
+  - secure: "XJ8JnWU4iprVkIYb+3KcUWe2VLQjI275chcnWUB6ZCJlE64OGWbvqtzbn67ARICqTqK8julSCO//wOcqHeOXNcTqZ4yHzxGBQXIHBlEXWp6xVTdnD8zl+F/S5g05GcNNAdJyfxW83z3Eha7QUTHbmYfLw/Ev9u85+5My00zZz0U="
+  - secure: "N04bNRIgSTEvLP1QFKK4LPuS99l95UbdAt7yL1C0o/ijayRNPVnchyvJjYeqmG3HhlYpBFuS416DuIsftR/rMn/Lozz6aQ6WqdPB/hqnz+0wiETf8WPuh+iqAeCNGL4kiHTv8xZaAvH4Gkqn2SEIKgCbGFzEQekG1JF54giZSdM="
