--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,11 @@ deploy:
   provider: pypi
   user: __token__
   password:
-    secure: rpfi3n/+oKepeZ9qfVMC1A0QnMZUNTnflIo/jAwmm1PoYBv0Y31LPcNeMos7VKDo56R5Zq2RscYL1C1oiytxL9CTUnYNdeoUu0cf7G+eiK0UzR2LsPLTmmIFFFOhtUF66vjetkXSAHCHCRwL+74u5Hd0qWfZgbkJfxNm7i4UCbc=
+    secure: ZUKSnUENEPkwSyNz5VpjN8MGVH0p8Eiu1SRH9dN1redaqQyjBn2O7YStXCx5PXMbEg3zgzyu3QXorIvph6kF0nl3SBFkbBQ+9UNaVtPiDY9ubS85iH8p4XvmVinAh+4kN4P4MbK7Pq0HdvpD5tNvmLmJdah00evk18rkkCSH/fs=
   on:
     distributions: sdist bdist_wheel
     repo: Mangopay/mangopay2-python-sdk
     branch: release
     tags: false
+    python: 3.5
     condition: $TRAVIS_PYTHON_VERSION = "3.5"
