--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ python:
 install:
 - pip install -r requirements/base.txt
 - pip install -r requirements/development.txt
-script: if [ $TRAVIS_BRANCH != "release" ]; then nosetests; fi
+script:
+- if [ $TRAVIS_BRANCH != "release" ]; then nosetests; fi
 sudo: required
 dist: xenial
 deploy:
