--- a/.github/workflows/build_py.yml
+++ b/.github/workflows/build_py.yml
@@ -29,6 +29,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements/base.txt
         pip install -r requirements/development.txt
-    - name: Test with pytest
+    - name: Run tests
       run: |
         python -m unittest discover
