--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -4,7 +4,7 @@ on:
   push:
     # Sequence of patterns matched against refs/tags
     tags:
-      # It pushes any tags that contain a v. ex: v1.16.1
+      # It pushes any tags that contain a v. ex: 1.16.1
       - '*'
 
 jobs:
