--- a/.github/workflows/build_py.yml
+++ b/.github/workflows/build_py.yml
@@ -15,15 +15,13 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.6
       uses: actions/setup-python@v2
       with:
-        python-version: 3.6
+        python-version: 3.6.15
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
