--- a/.github/workflows/build_py.yml
+++ b/.github/workflows/build_py.yml
@@ -3,7 +3,6 @@ name: mangopay2-python-sdk-ci
 on:
   push:
     branches:
-      # push on master branch
       - master
   pull_request:
     branches: [ master ]
@@ -11,20 +10,28 @@ on:
 
 jobs:
   build:
-
+    name: Test on python ${{ matrix.python-version }}
     runs-on: ubuntu-20.04
 
+    strategy:
+      matrix:
+        python-version: [ "3.6", "3.8" ]
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.6
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: 3.6
+          python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements/base.txt
           pip install -r requirements/development.txt
+
       - name: Run tests
         run: |
           python -m unittest discover
