--- a/.github/workflows/build_py.yml
+++ b/.github/workflows/build_py.yml
@@ -22,7 +22,7 @@ jobs:
           python-version: 3.6
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade --no-cache-dir pip
           pip install -r requirements/base.txt
           pip install -r requirements/development.txt
       - name: Run tests
